--- a/screen.css
+++ b/screen.css
@@ -40,7 +40,7 @@ body{
 
 .register_btn {
     background-color: #E43;
-    border: 2 px dashed #A43;
+    border: 2px dashed #A43;
     border-radius: 2em;
     color: #fff;
     cursor: pointer;
@@ -51,13 +51,46 @@ body{
 }
 
 #what {
-      background-color: #6B9;
-    border-bottom: 2px dashed #487;
-    color: white;
+    background-color: #bdf1dd;
     font-weight: bold;
-    padding: 20px 0;
     text-align: center;
-    word-spacing: 2em;
-  
+    color: #1d7485;
+    margin-top: 450px;
+    padding-top: 50px;
+    padding-left: 300px;
+    padding-right: 300px;
+    
 }
+
+#why {
+    background-color: #a8efd4;
+    color: #1d7485;
+    font-weight: bold;
+    text-align: left;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 50px
+}
+
+#where {
+    background-image:
+        url(img/map.gif);
+    padding-top: 50px;
+    padding-bottom: 450px;
+    text-align: center;
+    color: #ce1189;
+   
+}
+
+#when {
+    color: white;
+    background-color: #109e9a;
+    padding-top: 50px;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 50px;
+    background-image:url(img/wires.png)
+}
+
+
 
