--- a/screen.css
+++ b/screen.css
@@ -92,5 +92,20 @@ body{
     background-image:url(img/wires.png)
 }
 
+#who {
+    background-color:azure;
+    color: #1d7485;
+    padding-top: 50px;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 50px;
+    
+}
 
-
+#footer {
+    background-color: #82DDB;
+    background-image: 
+        url('img/texture.jpg');
+    max-width: 30px;
+    
+}
