--- a/screen.css
+++ b/screen.css
@@ -52,24 +52,39 @@ body{
 
 #what {
     background-color: #bdf1dd;
-    font-weight: bold;
     text-align: center;
     color: #1d7485;
     margin-top: 450px;
     padding-top: 50px;
-    padding-left: 300px;
-    padding-right: 300px;
+    padding-left: 350px;
+    padding-right: 350px;
+    padding-bottom: 50px;
+    font-size: 1.2em;
+    word-spacing: normal;
     
+    
+}
+
+.sponser_logos {
+    max-width: 400px;
 }
 
 #why {
     background-color: #a8efd4;
     color: #1d7485;
-    font-weight: bold;
     text-align: left;
-    padding-left: 300px;
-    padding-right: 300px;
-    padding-bottom: 50px
+    padding-top: 30px;
+    padding-left: 350px;
+    padding-right: 350px;
+    padding-bottom: 50px;
+    font-size: 1.2em;
+    word-spacing: normal;
+    text-align: center;
+
+}
+
+.left {
+    text-align: left;
 }
 
 #where {
@@ -79,6 +94,7 @@ body{
     padding-bottom: 450px;
     text-align: center;
     color: #ce1189;
+    font-size: 1.2em;
    
 }
 
@@ -86,26 +102,37 @@ body{
     color: white;
     background-color: #109e9a;
     padding-top: 50px;
-    padding-left: 300px;
-    padding-right: 300px;
+    border-image-slice: 2px dashed #487;
+    padding-left: 350px;
+    padding-right: 350px;
     padding-bottom: 50px;
-    background-image:url(img/wires.png)
+    background-image:url(img/wires.png);
+    text-align: center;
+    font-size: 1.2em;
 }
 
 #who {
-    background-color:azure;
+    background-color: #f5f5f5;
     color: #1d7485;
     padding-top: 50px;
-    padding-left: 300px;
-    padding-right: 300px;
+    padding-left: 350px;
+    padding-right: 350px;
     padding-bottom: 50px;
+    font-size: 1.2em;
+    word-spacing: normal;
+    text-align: center;
     
 }
 
 #footer {
     background-color: #82DDB;
-    background-image: 
+    background-image: url(img/illustration.gif),
         url('img/texture.jpg');
-    max-width: 30px;
-    
+    background-position: center 280px, left top;
+    background-repeat: no-repeat, repeat-x;
+    background-size: 800px, auto;
+   
+ 
 }
+
+
